--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,11 +14,36 @@ name: "CodeQL"
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - '.gitattributes'
+      - '.vscode/**'
+      - 'CHANGELOG.md'
+      - 'CONTRIBUTING.md'
+      - 'LICENSE'
+      - 'README.md'
+      - 'TODO.md'
+      - 'lgtm.yml'
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - '.gitattributes'
+      - '.vscode/**'
+      - 'CHANGELOG.md'
+      - 'CONTRIBUTING.md'
+      - 'LICENSE'
+      - 'README.md'
+      - 'TODO.md'
+      - 'lgtm.yml'
   schedule:
-    - cron: '23 14 * * 4'
+    - cron: '30 9 1-7 * 1'
+
+concurrency:
+  group: code-ql-${{ github.head_ref }}-1
+  cancel-in-progress: true
 
 jobs:
   analyze:
