--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -6,51 +6,78 @@ name: Unit tests
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - '.gitattributes'
+      - '.vscode/**'
+      - 'CHANGELOG.md'
+      - 'CONTRIBUTING.md'
+      - 'LICENSE'
+      - 'README.md'
+      - 'TODO.md'
+      - 'lgtm.yml'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - '.gitattributes'
+      - '.vscode/**'
+      - 'CHANGELOG.md'
+      - 'CONTRIBUTING.md'
+      - 'LICENSE'
+      - 'README.md'
+      - 'TODO.md'
+      - 'lgtm.yml'
+
+concurrency:
+  group: unit-tests-${{ github.head_ref }}-1
+  cancel-in-progress: true
 
 jobs:
-  build:
+  test:
+    name: Unit-Tests
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - { python: "3.10", poetry: "1.6.1", node: 'lts/*' }
+          - { python: "3.11", poetry: "1.6.1", node: 'lts/*' }
     env:
       TEST_CYCLE_BREAKER_ALLOWED_ERRORS: 7
     steps:
-    - uses: actions/checkout@v3
-    - uses: nanasess/setup-chromedriver@v2
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4.1.1
       with:
-        node-version: 16
+        token: ${{ SECRETS.GITHUB_TOKEN }}
+    - uses: nanasess/setup-chromedriver@v2.2.0
+    - uses: actions/setup-node@v4.0.0
+      with:
+        node-version: '${{ matrix.node }}'
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v4.7.1
       with:
-        python-version: '3.10'
+        python-version: '${{ matrix.python }}'
     - name: Install poetry
       uses: Gr1N/setup-poetry@v8
       with:
-        poetry-version: "1.3.2"
+        poetry-version: '${{ matrix.poetry }}'
     - name: Cache poetry
       id: cached-poetry-dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v3.3.2
       with:
         path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}-python-${{ matrix.python-version }}
+        key: ${{ runner.os }}-poetry-${{ matrix.poetry }}-${{ hashFiles('poetry.lock') }}-python-${{ matrix.python }}
     - run: poetry --version
     - name: Install dependencies
-      run: poetry install
+      run: |
+        poetry install --all-extras
+        poetry run npm install -g npm@latest
     - name: Build components
       run: |
         poetry run npm install | echo "Ignore npm install error"
         poetry run npm run build_no_r
     - name: Test with pytest
       run: |
-        poetry run pytest --cov=dash_extensions --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov-report=xml tests
-    - name: Upload pytest test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: pytest-results-${{ matrix.python-version }}
-        path: junit/test-results-${{ matrix.python-version }}.xml
-        # Use always() to always run this step to publish test results when there are test failures
-      if: ${{ always() }}
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+        poetry run pytest --cov=dash_extensions tests
