--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-extensions",
-  "version": "1.0.4",
+  "version": "1.0.4+deps",
   "description": "Extensions for Plotly Dash.",
   "main": "build/index.js",
   "scripts": {
@@ -18,47 +18,50 @@
   "author": "Emil Eriksen <emil.h.eriksen@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@img-comparison-slider/react": "^7.7.0",
-    "@plotly/webpack-dash-dynamic-import": "^1.2.0",
+    "@img-comparison-slider/react": "^7.8.1",
+    "@plotly/webpack-dash-dynamic-import": "^1.3.0",
     "base64-js": "^1.5.1",
-    "dash-extensions-js": "0.0.2",
-    "dompurify": "^2.3.6",
+    "dash-extensions-js": "0.0.8",
+    "dompurify": "^2.4.7",
     "loader-utils": ">=3.2.1",
-    "mermaid": "^9.2.2",
+    "mermaid": "^9.4.3",
     "node-polyfill-webpack-plugin": "^2.0.1",
-    "ramda": "^0.26.1",
+    "ramda": "^0.29.1",
     "react-loadable": "^5.5.0",
-    "react-lottie": "^1.2.3",
-    "ssri": "^9.0.0"
+    "react-lottie-wrapper": "^1.1.8",
+    "ssri": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.2.5",
+    "@babel/plugin-transform-object-rest-spread": "^7.22.15",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/runtime": "^7.23.2",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "copyfiles": "^2.4.1",
-    "css-loader": "^5.2.7",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.29.4",
-    "loader-utils": ">=1.4.2",
-    "npm": "^9.6.6",
+    "core-js": "^3.33.2",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react": "^7.33.2",
+    "loader-utils": "3.2.1",
+    "npm": "^10.2.1",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
-    "react-docgen": "^5.4.0",
+    "react-docgen": "^5.4.3",
     "react-dom": "^16.14.0",
-    "style-loader": "^3.3.1",
-    "styled-jsx": "^5.1.0",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "style-loader": "^3.3.3",
+    "styled-jsx": "^5.1.2",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
-    "node": ">=8.11.0",
-    "npm": ">=6.1.0"
+    "node": ">=16.0.0",
+    "npm": ">=9.0.0"
   }
 }
