--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dash-extensions"
-version = "1.0.4"
+version = "1.0.4+deps"
 description = "Extensions for Plotly Dash."
 authors = ["emher <emil.h.eriksen@gmail.com>"]
 license = "MIT"
@@ -25,32 +25,32 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 dash = ">=2.9.3"
-more-itertools = "^9.0.0"
-jsbeautifier = "^1.14.3"
-Flask-Caching = "2.0.2"
-dash-mantine-components = {version = "^0.11.1", optional = true}
+more-itertools = ">=8.0.0"
+jsbeautifier = "^1.14.9"
+Flask-Caching = ">=2.0.2"
+dash-mantine-components = {version = ">=0.11.1", optional = true}
 dataclass-wizard = "^0.22.2"
 
 [tool.poetry.extras]
 mantine = ["dash-mantine-components"]
 
 [tool.poetry.dev-dependencies]
-dash = {extras = ["dev", "testing"], version = "^2.8.1"}
-pytest-cov = "^4.0.0"
-black = "^22.12.0"
+dash = {extras = ["dev", "testing"], version = ">=2.9.3"}
+pytest-cov = "^4.1.0"
+black = "^23.10.1"
 pandas = ">=1.5.3"
-quart = "^0.18.3"
-starlette = "^0.27.0"
+quart = "^0.19.3"
+starlette = "^0.31.1"
 requests = "^2.31.0"
 certifi = "^2023.07.22"
-uvicorn = "^0.20.0"
-sse-starlette = "^1.2.1"
-urllib3 = "^1.26.17"
+uvicorn = "^0.23.2"
+sse-starlette = "^1.6.5"
+urllib3 = "<2.0.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.5.1"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
-target-version = ["py39"]
+target-version = ["py310"]
