--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-extensions",
-  "version": "1.0.4+deps",
+  "version": "1.0.12",
   "description": "Extensions for Plotly Dash.",
   "main": "build/index.js",
   "scripts": {
@@ -32,13 +32,13 @@
     "ssri": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-transform-object-rest-spread": "^7.22.15",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.22.15",
-    "@babel/runtime": "^7.23.2",
+    "@babel/runtime": "^7.23.9",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "copyfiles": "^2.4.1",
@@ -46,7 +46,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "loader-utils": "3.2.1",
     "npm": "^10.2.1",
@@ -54,14 +54,14 @@
     "react": "^16.14.0",
     "react-docgen": "^5.4.3",
     "react-dom": "^16.14.0",
-    "style-loader": "^3.3.3",
+    "style-loader": "^3.3.4",
     "styled-jsx": "^5.1.2",
-    "terser-webpack-plugin": "^5.3.9",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": ">=16.0.0",
-    "npm": ">=9.0.0"
+    "npm": ">=10.0.0"
   }
 }
