--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dash-extensions"
-version = "1.0.4+deps"
+version = "1.0.12"
 description = "Extensions for Plotly Dash."
 authors = ["emher <emil.h.eriksen@gmail.com>"]
 license = "MIT"
@@ -24,20 +24,20 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
-dash = ">=2.9.3"
-more-itertools = ">=8.0.0"
-jsbeautifier = "^1.14.9"
-Flask-Caching = ">=2.0.2"
-dash-mantine-components = {version = ">=0.11.1", optional = true}
+dash = ">=2.15.0"
+more-itertools = "^9.0.0"
+jsbeautifier = "^1.14.3"
+Flask-Caching = "^2.1.0"
+dash-mantine-components = {version = "^0.11.1", optional = true}
 dataclass-wizard = "^0.22.2"
 
 [tool.poetry.extras]
 mantine = ["dash-mantine-components"]
 
 [tool.poetry.dev-dependencies]
-dash = {extras = ["dev", "testing"], version = ">=2.9.3"}
-pytest-cov = "^4.1.0"
-black = "^23.10.1"
+dash = {extras = ["dev", "testing"], version = "^2.15.0"}
+pytest-cov = "^4.0.0"
+black = "^22.12.0"
 pandas = ">=1.5.3"
 quart = "^0.19.3"
 starlette = "^0.31.1"
